# ruranges

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml
pyrunges/: __init__.py
ruranges/: __init__.py
src/: boundary.rs  cluster.rs  complement.rs  complement_single.rs  extend.rs  group_cumsum.rs  helpers.rs  lib.rs  map_to_global.rs  max_disjoint.rs  merge.rs  multiprocessing.rs  nearest.rs  numpy_bindings.rs  outside_bounds.rs  overlaps.rs  overlaps_simple.rs  ruranges_structs.rs  sorts.rs  spliced_subsequence.rs  split.rs  subtract.rs  tile.rs
src/bindings/: mod.rs  polars_bindings.rs
src/bindings/numpy_bindings/: boundary_numpy.rs  cluster_numpy.rs  complement_numpy.rs  complement_overlaps_numpy.rs  count_overlaps_numpy.rs  extend_numpy.rs  genome_bounds_numpy.rs  group_cumsum_numpy.rs  map_to_global_numpy.rs  max_disjoint_numpy.rs  merge_numpy.rs  mod.rs  nearest_numpy.rs  overlaps_numpy.rs  overlaps_simple_numpy.rs  sort_intervals_numpy.rs  spliced_subsequence_numpy.rs  split_numpy.rs  subtract_numpy.rs  tile_numpy.rs  window_numpy.rs
src/io/: bam.rs  bed.rs  csv.rs  gtf.rs  mod.rs
src/numpy_bindings/: mod.rs  numpy_bindings.rs
