[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ruranges"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
version = "0.0.1"

[tool.maturin]
features = ["pyo3/extension-module"]


authors = [
    { name = "Endre Bakken Stovner", email = "endrebak@pm.me" }
]

bindings = "pyo3"
sdist = true
manylinux = "manylinux_2_28"
strip = true

[project.urls]
# Adjust these for your project
Homepage = "https://github.com/yourname/ruranges"
Repository = "https://github.com/yourname/ruranges"
